[gd_scene load_steps=8 format=2]

[ext_resource path="res://yeeter/yeeter.gd" type="Script" id=1]
[ext_resource path="res://yeeter/entities/nest/nest.tscn" type="PackedScene" id=2]
[ext_resource path="res://yeeter/entities/power_bar/power_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://yeeter/entities/remaining/remaining.tscn" type="PackedScene" id=4]
[ext_resource path="res://yeeter/entities/bird_cannon/bird_cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://yeeter/overlays/start_overlay/start_overlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://yeeter/overlays/end_overlay/end_overlay.tscn" type="PackedScene" id=7]

[node name="yeeter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
remaining_path = NodePath("remaining")
bird_cannon_path = NodePath("bird_cannon")

[node name="bird_cannon" parent="." instance=ExtResource( 5 )]
position = Vector2( 196.413, 379.088 )
egg_spawn_path = NodePath("../../yeeter/bird_cannon/egg_spawn")
power_bar_path = NodePath("../power_bar")

[node name="power_bar" parent="." instance=ExtResource( 3 )]
margin_left = 67.2392
margin_top = 421.818
margin_right = 414.239
margin_bottom = 460.818
bird_cannon_path = NodePath("../bird_cannon")
remaining_path = NodePath("../remaining")

[node name="remaining" parent="." instance=ExtResource( 4 )]
margin_left = 70.4011
margin_top = 21.4057
margin_right = 110.401
margin_bottom = 61.4057

[node name="nest" parent="." instance=ExtResource( 2 )]
position = Vector2( 534.073, 248.559 )
scale = Vector2( 0.402234, 0.402234 )

[node name="start_overlay" parent="." instance=ExtResource( 6 )]

[node name="end_overlay" parent="." instance=ExtResource( 7 )]

[node name="back_button" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_finished" from="." to="." method="_on_yeeter_game_finished"]
[connection signal="none_remaining" from="remaining" to="bird_cannon" method="_on_remaining_none_remaining"]
[connection signal="none_remaining" from="remaining" to="." method="_on_remaining_none_remaining"]
[connection signal="none_remaining" from="remaining" to="power_bar" method="_on_remaining_none_remaining"]
[connection signal="ready_to_start" from="start_overlay" to="bird_cannon" method="_on_start_overlay_ready_to_start"]
[connection signal="ready_to_start" from="start_overlay" to="power_bar" method="_on_start_overlay_ready_to_start"]
[connection signal="ready_to_end" from="end_overlay" to="." method="_on_end_overlay_ready_to_end"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
